# upheno-dev

./: .cruft.json  .gitignore  .travis.yml  Jenkinsfile  README.md  issue_template.md  pyproject.toml  run.sh.conf  upheno.obo  upheno.owl
.github/workflows/: deploy-docs.yml  qc.yml
docs/: SetUpS3.md  conf.py  index.rst
imports/: go_import.owl  plana_import.obo  ro_import.obo  uberon_import.obo  xao_import.obo  zfa_import.obo
mappings/: upheno-lexical.sssom.tsv  upheno-species-independent.sssom.tsv  upheno_mapping_mp_hp.csv
modules/hp-mp/: upheno-base.owl
patterns/: pattern.owl
phenotype_utils/: .gitignore  pom.xml
reports/: upheno-base.owl-obo-report.tsv
src/analysis/: upheno_patterns.Rmd
src/curation/: README.md  blacklisted_upheno_iris.txt  disjoints_removal.txt  legal_fillers.txt  legal_pattern_vars.txt  obsolete.txt  ontologies.txt  phenotype_roots.txt  release.md  upheno-config.yaml  upheno_fillers.yml  upheno_id_map.txt
src/mappings/: nbo-go.sssom.tsv  uberon.sssom.tsv  upheno-cross-species.sssom.tsv  upheno-lexical.sssom.tsv  upheno-oba.kgx_edges.tsv  upheno-oba.sssom.tsv  upheno-species-independent-eq.sssom.tsv  upheno-species-independent-manual.sssom.tsv  upheno-species-independent.sssom.tsv
src/metadata/: upheno.md  upheno.yml
src/ontology/: Makefile  README-editors.md  catalog-v001.xml  equivalent_class_table_self.csv  equivalent_class_table_upheno.csv  run-rdfmatcher.sh  run.sh  upheno-alignments.owl  upheno-edit.owl  upheno-extra.owl  upheno-odk.yaml  upheno-removed-axioms.owl  upheno.Makefile
tests/: __init__.py  demo_test.py
(+1851 files in other folders)
